css/style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Press+Start+2P&display=swap");

/* Custom properties */

:root {
  /* Font family */
  --ff-primary: "Montserrat", sans-serif;
  --ff-secondary: "Press Start 2P", cursive;

  /* Font weight*/
  --fw-400: 400;
  --fw-700: 700;

  /* Font size */
  --fs-200: 0.8rem;
  --fs-300: 1rem;
  --fs-400: 1.125rem; /* body */
  --fs-500: 1.3125rem; /* h3 */
  --fs-600: 1.5rem; /* h2 */
  --fs-900: 2rem; /* h1 */

  --bg-body: #ebe8e0;
  --clr-neutral: #fff;
  --clr-primary-400: #1e1926;
  --clr-secondary-400: #0e14c5;
  --clr-accent-red: #ca0001;
  --clr-accent-purple: #4d2aa5;

  --border-solid: 5px solid currentColor;
  --border-dotted: 5px dotted currentColor;
  --animate: all 350ms var(--ease-in-out);

  --header-max-height: 4.5rem;

  /* Timing functions */

  --ease-in: cubic-bezier(0.75, 0, 1, 1);
  --ease-out: cubic-bezier(0.215, 0.61, 0.355, 1);
  --ease-in-out: cubic-bezier(0.645, 0.045, 0.355, 1);
  --ease: cubic-bezier(0.44, 0.21, 0, 1);
}

/* Font changes to h1, h2, h3 */

@media (min-width: 50em) {
  :root {
    --fs-500: 1.5rem; /* h3 */
    --fs-600: 2.25rem; /* h2 */
    --fs-900: 3rem; /* h1 */
  }
}

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* Remove list styles on ul, ol elements */
ul,
ol {
  list-style: none;
}

a {
  text-decoration: none;
  color: inherit;
}

/* Avoid text overflows */

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* Set core root defaults */

html:focus-within {
  scroll-behavior: smooth;
}

/* Changes default colors when highlighting text */

::selection {
  color: var(--clr-neutral);
  background-color: var(--clr-secondary-400);
}

.section-title::selection {
  color: var(--clr-neutral);
  background-color: var(--clr-accent-red);
}

/* Set core body defaults */
body {
  font-family: var(--ff-primary);
  font-weight: var(--fw-400);
  font-size: var(--fs-400);
  color: var(--clr-primary-400);
  background-color: var(--bg-body);
  line-height: 1.5;
}

/* Make images easier to work with */

img,
picture,
svg {
  max-width: 100%;
  display: block;
}

img {
  border: var(--border-solid);
  transition: var(--animate);
}

/* Image Animation */

img:is(:hover, :focus) {
  color: var(--clr-secondary-400);
  border: var(--border-dotted);
}

/* ==== Utilities ==== */

.container {
  --max-width: 74.75rem;
  width: min(100% - 2rem, var(--max-width));
  margin-inline: auto;
}

section,
footer {
  padding-block: 2rem;
}

@media (min-width: 50em) {
  section {
    padding-block: 4rem;
  }
  footer {
    padding-block: 3rem;
  }
}

/* Responsive grids */

.even-columns {
  display: grid;
  gap: 1.5rem;
}

@media (min-width: 50em) {
  .even-columns {
    grid-auto-flow: column;
    grid-auto-columns: 1fr;
  }
}

/* responsive auto grid where it has a min and max value. The grid item can grow till there is a minimum of 250px width extra available and then it's sibling will automatic be placed next to it in a column. The min function basically decides out of the two values which is the smallest so the minimum value for each grid item will be 250px but when on phones and is smaller than 250px it will become 100% which will prevent card from overflowing it's parent container. */

.grid-auto-fit {
  display: grid;
  grid-gap: 1.5rem;
  grid-template-columns: repeat(auto-fit, minmax(min(100%, 250px), 1fr));
}

/* svg icons  */

.icon {
  height: 35px;
  width: 35px;
}

/* Logo Animation */

.logo:is(:hover, :focus) span,
.logo:is(:hover, :focus) svg {
  color: var(--clr-secondary-400);
}

/* spacing all items except the first child in a container :where has 0 specificity */

.flow > *:where(:not(:first-child)) {
  margin-top: var(--flow-spacer, 1rem);
}

/* Gives space between elements */

.spacer {
  margin-top: var(--spacer, 2rem);
}

@media (min-width: 50em) {
  .spacer {
    margin-top: var(--spacer, 3rem);
  }
}

.mx-auto {
  margin-inline: auto;
}

b {
  font-weight: var(--fw-700);
}

.color-secondary {
  color: var(--clr-secondary-400);
}

.text-center {
  text-align: center;
}

.uppercase {
  text-transform: uppercase;
}

/* Best practice when hideing an element but screenreaders will still be able to have access to it */

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* === CTA Button === */

.btn {
  display: inline-flex;
  gap: 1rem;
  align-items: center;
  justify-content: center;
  font-family: var(--ff-secondary);
  font-size: var(--fs-300);
  width: min(100%, 12.625rem);
  text-transform: uppercase;
  color: inherit;
  background-color: var(--clr-neutral);
  padding: 1em;
  border: var(--border-solid);
  text-decoration: none;
  transition: var(--animate);
}

/* CTA Animation */

.btn:is(:hover, :focus) {
  color: var(--clr-neutral);
  background-color: var(--clr-secondary-400);
  border: var(--border-dotted);
}

/* To change the color of svg */

.btn:is(:hover, :focus-visible) .github-icon {
  fill: var(--clr-neutral);
}

.btn .icon {
  height: 25px;
  width: 25px;
}

/* ==== Typography ==== */

.ff-secondary {
  font-family: var(--ff-secondary);
}

.site-title,
.section-title {
  font-family: var(--ff-secondary);
  line-height: 1.2;
}

.site-title {
  font-size: var(--fs-900);
  color: var(--clr-secondary-400);
}

.section-title {
  font-size: var(--fs-600);
  color: var(--clr-accent-red);
}

/* ==== Header Section ==== */

.site-header {
  position: sticky;
  top: 0;
  z-index: 999;
  background-color: var(--bg-body);
  padding: 1rem 0;
  border-bottom: var(--border-solid);
  max-height: var(--header-max-height);
}
/* ... */

